fixed layout issues, changed position of img, connected fonts

--- a/src/style.css
+++ b/src/style.css
@@ -1,29 +1,45 @@
 @font-face {
-  font-family: Avenir;
-  src: url(fonts/Avenir.ttc);
+  font-family: "Avenir";
+  font-weight: 300;
+  font-style: normal;
+  src: url(./fonts/Avenir-Book.ttf);
 }
 
-body {
-  font-family: Avenir, sans-serif;
+@font-face {
+  font-family: "Avenir";
+  font-weight: 800;
+  font-style: normal;
+  src: url(./fonts/Avenir-Heavy.ttf);
+}
+
+html {
+  font-family: "Avenir", sans-serif;
 }
 
 * {
   box-sizing: border-box;
 }
 
+.search-box {
+  position: relative;
+  margin-top: 20px;
+}
+
 .icon {
   position: absolute;
+  display: block;
   width: 19px;
   height: 19px;
-  left: 32px;
-  top: 45px;
+  top: 24px;
+  left: 24px;
+
 }
 
 .icon-small {
   width: 11px;
   height: 11px;
-  top: 124px;
-  left: 23px;
+  top: 16px;
+  left: 15px;
 }
 
 .input {
@@ -32,7 +48,7 @@ body {
   width: 100%;
   height: 70px;
   font-size: 16px;
-  font-weight: 300;
+  color: #3d4e61;
   margin: 20px auto;
   padding-left: 62px;
   border: 1px solid #e1e7ed;
@@ -44,8 +60,6 @@ body {
   background: #fff;
   border: 1px solid #e1e7ed;
   box-shadow: 0 3px 8px;
-  font-weight: 400;
-
 }
 
 .input:focus {
@@ -56,16 +70,15 @@ body {
 .input-small {
   height: 42px;
   font-size: 14px;
-  font-weight: 300px;
+  font-weight: 400px;
   padding: 12px 0 14px 33px;
   background-size: 11px;
 }
 
 .input::placeholder {
-  font-family: "inherit", sans-serif;
-  color: #3d4e61;
+  font-family: inherit;
 }
 
 .input-small::placeholder {
-  font-family: "inherit", sans-serif;
+  font-family: inherit;
 }
